# z1n

./: README.md  pyproject.toml
.github/workflows/: ci.yml
network_assets/: hooks.py  modules.txt
network_assets/fixtures/: property_setter.json
network_assets/network_assets/doctype/contacts/: contacts.json  contacts.py
network_assets/network_assets/doctype/interface_parent/: interface_parent.js  interface_parent.json  interface_parent.py  test_interface_parent.py
network_assets/network_assets/doctype/ip_address/: ip_address.js  ip_address.json  ip_address.py  test_ip_address.py
network_assets/network_assets/doctype/ip_aggregate/: ip_aggregate.js  ip_aggregate.json  ip_aggregate.py  test_ip_aggregate.py
network_assets/network_assets/doctype/ip_asn/: ip_asn.js  ip_asn.json  ip_asn.py  test_ip_asn.py
network_assets/network_assets/doctype/ip_asn_range/: ip_asn_range.js  ip_asn_range.json  ip_asn_range.py  test_ip_asn_range.py
network_assets/network_assets/doctype/ip_prefix/: ip_prefix.js  ip_prefix.json  ip_prefix.py  test_ip_prefix.py
network_assets/network_assets/doctype/ip_range/: ip_range.js  ip_range.json  ip_range.py  test_ip_range.py
network_assets/network_assets/doctype/ip_rir/: ip_rir.js  ip_rir.json  ip_rir.py  test_ip_rir.py
network_assets/network_assets/doctype/ip_route_target/: ip_route_target.js  ip_route_target.json  ip_route_target.py  test_ip_route_target.py
network_assets/network_assets/doctype/ip_route_targets/: ip_route_targets.json  ip_route_targets.py
network_assets/network_assets/doctype/ip_vrf/: ip_vrf.js  ip_vrf.json  (+2 more)
(+137 files in other folders)
