[project]
name = "network_assets"
authors = [
    { name = "Hybrowlabs Technologies", email = "chinmay@hybrowlabs.com"}
]
description = "To access network assets data quickly and effectively while its fully integrated with the rest of business data."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
